fix: adjust font size to prevent header wrap

--- a/src/encoded/static/scss/encoded/modules/_static-pages.scss
+++ b/src/encoded/static/scss/encoded/modules/_static-pages.scss
@@ -809,10 +809,12 @@ body[data-path="/"]>#application>#layout {
 											background-color: transparent;
 											justify-content: flex-start;
 											align-items: center;
+											font-size: 11px;
 											
 											i {
 												color: #485983;
 												margin-right: 5px;
+												font-size: 10px;
 											}
 										}
 			
